syntax = "proto3";

package pb;

import "ext.proto";

message FileBase {
		string name = 1;
  	string wpath = 2;
  	bool regular = 3;
  	int64 size = 4;
  	bool is_end = 5;
}

message FileList {
		int64 total_size = 1;
  	string strip = 2;
  	repeated FileBase files = 3 [(ext.nullable) = true];
}

message FileIdx {
	int64 idx = 1;
}

message HashBuf {
	int64 offset = 1;
	int64 len = 2;
	int64 index = 3;
	uint32 sum1 = 4;
	bytes sum2 = 5;
}

message HashHead {
	// number of blocks
	int64 check_sum_count = 1;

	// block length in the file
	int64 block_length = 2;

	int64 check_sum_length = 3;

	// RemainderLength is fileLength % BlockLength
	int64 remainder_length = 4;

	repeated HashBuf hashs = 5 [(ext.nullable) = true]; 
}

message FileChunk {
	HashBuf hash = 1 [(ext.nullable) = true];
	bytes data = 2;
	bool is_end = 3;
}
